syntax = "proto3";
package agrpc;




// The customer service definition.
service Customer {
    // get all customers with filter - A server to client streaming RPC
    rpc GetCustomers(CustomerFilter) returns (stream CustomerRequest){}
    // create a new Customer -a simple RPC
    rpc CreateCustomer(CustomerRequest) returns (CustomerResponse){}

}
// Request Message for creating a new customer
message CustomerRequest{
    int32 id =1;
    string name =2;
    string email =3;
    string phone=4;

message Address{
    string street=1;
    string city =2;
    string state =3;
    string zip=4;
    bool isShippingAddress=5;
}
repeated Address addresses =5;
}
message CustomerResponse{
int32 id =1;
bool success=2;
}
message CustomerFilter{
    string keyword=1;
}